[init] Add syntax highlight handle.